# youoke

./: .angular-cli.json  .gitignore  .ruby-gemset  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Gemfile  Procfile  Procfile.dev  README.md  _config.yml  angular.json  asset-manifest.json  docker-compose.yml  googleauth.js  gtest.js  icon.icns  index.html  index.md  init_youoke.sh  main.js  nginx-default.conf  package-lock.json  package.json
_layouts/: default.html
app/channels/: comments_channel.rb  player_channel.rb  qs_channel.rb  search_channel.rb  videos_channel.rb
app/controllers/: channels_controller.rb  comments_controller.rb  examples_controller.rb  qs_controller.rb  sessions_controller.rb  videos_controller.rb  youoke_controller.rb
app/jobs/: comment_relay_job.rb  (+6 more)
assets/: index-26jUR95H.js  index-BKoA_AwJ.css  index-BbJiG1pN.js  index-Bf2nPy7C.js  index-BthOzqIy.js  index-CjbBmZMP.js  index-CvS-87nm.css  index-DXbTVUHf.js  index-r-Xgg7Up.js
client/: README.md  index.html  package-lock.json  package.json
config/: application.rb  cable.yml  database.yml  routes.rb  secrets.yml  unicorn.rb
db/: schema.rb  seeds.rb
server/: .dockerignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  server.js
server/example/: index.html
server/examples/: 5--RnSogips.info.json  client.rs  index.html  player.html  server.rs
server/examples/fonts/: fonts.css
server/src/: main.rs  websocket_proxy.rs
src/: app.component.ts  index.html  index.ts  material-theme.scss  normalize.css  polyfills.ts  styles.css
(+140 files in other folders)
