[package]
name = "youoke-server"
version = "0.1.0"
authors = ["eeddee <edward@edwardsharp.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.13.0"
log = "0.4.14"
env_logger = "0.8.3"
url = "2.2.2"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
