[package]
name = "youoke-server"
version = "0.1.0"
authors = ["eeddee <edward@edwardsharp.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.17.3"
tokio-tungstenite = "0.17.2"
futures-channel = "0.3.23"
futures-util = "0.3.23"
tokio = { version = "1.20.1", features = ["full"] }
log = "0.4.17"
env_logger = "0.9.0"
url = "2.2.2"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
glob = "0.3.0"
